--- a/templates/base.html
+++ b/templates/base.html
@@ -383,9 +383,9 @@
                                 </ul>
                             </li>
                             
-                            <!-- Employee Management -->
+                            <!-- Employee Management - FIXED: Changed route name -->
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('supervisor.manage_employees') }}">
+                                <a class="nav-link" href="{{ url_for('supervisor.employee_management') }}">
                                     <i class="bi bi-people-fill"></i> Employees
                                 </a>
                             </li>
